--- a/src/fxml/game.fxml
+++ b/src/fxml/game.fxml
@@ -6,11 +6,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" style="-fx-background-color: #A2E4E4;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" style="-fx-background-color: #A2E4E4;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Game">
    <children>
       <AnchorPane layoutX="10.0" layoutY="52.0" prefHeight="80.0" prefWidth="480.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="52.0">
          <children>
-            <TextArea editable="false" prefHeight="80.0" prefWidth="480.0" text="ZX-Spectrum 48 загадал число от 1 до 100, попробуй &#10;угадай его за меньшее количество попыток.">
+            <TextArea fx:id="textConsole" editable="false" prefHeight="80.0" prefWidth="480.0" text="">
                <cursor>
                   <Cursor fx:constant="TEXT" />
                </cursor>
