--- a/src/fxml/mainwindow.fxml
+++ b/src/fxml/mainwindow.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.Blend?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.paint.LinearGradient?>
 <?import javafx.scene.paint.Stop?>
@@ -12,21 +13,34 @@
    <children>
       <AnchorPane layoutY="118.0" prefHeight="580.0" prefWidth="500.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="120.0">
          <children>
-            <Button fx:id="startGame" layoutX="110.0" layoutY="141.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="250.0" style="-fx-background-color: #6589D9;" text="Начать игру" AnchorPane.bottomAnchor="389.0" AnchorPane.leftAnchor="110.0" AnchorPane.rightAnchor="110.0" AnchorPane.topAnchor="141.0">
+            <Button fx:id="startGame" alignment="CENTER" layoutX="110.0" layoutY="141.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="250.0" style="-fx-background-color: #6589D9;" text="Начать игру" AnchorPane.bottomAnchor="389.0" AnchorPane.leftAnchor="110.0" AnchorPane.rightAnchor="110.0" AnchorPane.topAnchor="141.0">
                <font>
                   <Font name="KacstBook" size="22.0" />
                </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
-            <Button fx:id="aboutAthor" layoutX="110.0" layoutY="234.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="250.0" style="-fx-background-color: #6589D9;" text="Об авторе" AnchorPane.bottomAnchor="296.0" AnchorPane.leftAnchor="110.0" AnchorPane.rightAnchor="110.0" AnchorPane.topAnchor="234.0">
+            <Button fx:id="aboutAthor" alignment="CENTER" layoutX="110.0" layoutY="234.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="250.0" style="-fx-background-color: #6589D9;" text="Об авторе" AnchorPane.bottomAnchor="296.0" AnchorPane.leftAnchor="110.0" AnchorPane.rightAnchor="110.0" AnchorPane.topAnchor="234.0">
                <font>
                   <Font name="KacstBook" size="22.0" />
                </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
-            <Button fx:id="exit" layoutX="424.0" layoutY="540.0" mnemonicParsing="false" style="-fx-background-color: #6589D9;" text="Выход" textFill="#261717" />
+            <Button fx:id="exit" layoutX="424.0" layoutY="540.0" mnemonicParsing="false" style="-fx-background-color: #6589D9;" text="Выход" textFill="#261717">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Button>
+            <Label layoutX="14.0" layoutY="557.0" prefHeight="17.0" prefWidth="98.0" text="Ver. 1.0" />
          </children>
          <cursor>
-            <Cursor fx:constant="HAND" />
+            <Cursor fx:constant="DEFAULT" />
          </cursor>
+         <effect>
+            <Blend />
+         </effect>
       </AnchorPane>
       <Label layoutX="138.0" layoutY="14.0" prefHeight="81.0" prefWidth="216.0" text="Угадай число" AnchorPane.bottomAnchor="620.0" AnchorPane.leftAnchor="140.0" AnchorPane.rightAnchor="140.0" AnchorPane.topAnchor="0.0">
          <font>
@@ -40,9 +54,15 @@
                </stops>
             </LinearGradient>
          </textFill>
+         <cursor>
+            <Cursor fx:constant="DEFAULT" />
+         </cursor>
       </Label>
    </children>
    <cursor>
-      <Cursor fx:constant="HAND" />
+      <Cursor fx:constant="DEFAULT" />
    </cursor>
+   <effect>
+      <Blend />
+   </effect>
 </AnchorPane>
